--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ Each time the game starts, the game will change the value of each crystal.
 <div class="col-lg-3">
 </div>
 <div class="col-lg-3 random">
-dsds
+
 </div>
-<div class="col-lg-3 score">
+<div class="col-lg-3 game">
 <section id="message">
 </section>
 <section id="wins">
@@ -49,6 +49,15 @@ Losses:
 </div>
 </div>
 
+<!--YOUR SCORE-->
+<div class="row">
+<div class="col-lg-4">
+</div>
+<div class="col-lg-4 score">
+</div>
+<div class="col-lg-4">
+</div>
+
 <!--Crystals -->
 <div class="row">
 <div class="col-lg-4">
@@ -58,6 +67,8 @@ Losses:
 <image src="#" id="blue-crystal">
 <image src="#" id="yellow-crystal">
 <image src="#" id="green-crystal">
+</div>
+<div class="col-lg-4">
 </div>
 </div>
 
