--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Losses:
 <div class="col-lg-4">
 </div>
 <div class="col-lg-4 crystals">
-<image src="#" id="red-crystal">
+<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/pinkcrystal.jpg?raw=true" id="red-crystal" height="200px">
 <image src="#" id="blue-crystal">
 <image src="#" id="yellow-crystal">
 <image src="#" id="green-crystal">
