--- a/index.html
+++ b/index.html
@@ -12,64 +12,51 @@
 </head>
 <body>
 <!--Title Row-->
-<div class="row title">
-<div class="col-lg-12">
-<h1>Crystal Collector</h1>
-</div>
-</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12 title">
+			<h1>Crystal Collector</h1>
+		</div>
+	</div>
 <!--Rules-->
-<div class="row rules">
-<div class="col-lg-12">
-You will be given a random number at the start of the game.<br>
-There are four crystals below. By clicking on a crystal you will add a specific amount of points to your score.<br>
-You win the game by matching your total score to the random number. You lose the game if your totly score goes over the random number.<br>
-The value of each crystal is hidden from you until you click on it.<br>
-Each time the game starts, the game will change the value of each crystal. 
-</div>
-</div>
+	<div class="row rules">
+		<div class="col-lg-12">
+		You will be given a random number at the start of the game.<br>
+		There are four crystals below. By clicking on a crystal you will add a specific amount of points to your score.<br>
+		You win the game by matching your total score to the random number. You lose the game if your totly score goes over the random number.<br>
+		The value of each crystal is hidden from you until you click on it.<br>
+		Each time the game starts, the game will change the value of each crystal. 
+		</div>
+	</div>
 
-<!--Random number and score-->
-<div class="row">
-<div class="col-lg-3">
-</div>
-<div class="col-lg-3 random">
+	<div class="row score-board">
+		<div class="col-lg-6 random">
+		random number
+		</div>
+		<div class="col-lg-6 wins-losses">
+		wins:<br>losses:<br>
+		</div>
+	</div>
 
-</div>
-<div class="col-lg-3 game">
-<section id="message">
-</section>
-<section id="wins">
-Wins:
-</section>
-<section id="losses">
-Losses:
-</section>
-</div>
-<div class="col-lg-3">
-</div>
-</div>
+	<div class="row points">
+		<div class="col-lg-12 points-box">
+		current points
+		</div>
+	</div>
 
-<!--YOUR SCORE-->
-<div class="row">
-<div class="col-lg-4">
-</div>
-<div class="col-lg-4 score">
-</div>
-<div class="col-lg-4">
-</div>
 
 <!--Crystals -->
-<div class="row">
-<div class="col-lg-4">
-</div>
-<div class="col-lg-4 crystals">
-<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/pinkcrystal.jpg?raw=true" id="red-crystal" height="200px">
-<image src="#" id="blue-crystal">
-<image src="#" id="yellow-crystal">
-<image src="#" id="green-crystal">
-</div>
-<div class="col-lg-4">
-</div>
+	<div class="row crystals">
+		
+		<div class="col-lg-12">
+			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/pinkcrystal.jpg?raw=true" id="pink-crystal" height="100px">
+			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/bluecrystal.jpg?raw=true" id="blue-crystal" height="100px">
+			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/purplecrystal.jpg?raw=true" id="purple-crystal" height="100px">
+			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/greencrystal.jpg?raw=true" id="green-crystal" height="100px">
+		</div>
+		
+	</div>
 </div>
 
 </body>
