still needs some css

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
 	</div>
 
 	<div class="row points">
-		<div class="col-lg-12 points-box">
-		current points
+		<div class="col-lg-12 points">
+			Points:
+			<div class="points-box">
+			</div>
+
+		
 		</div>
 	</div>
 
@@ -50,7 +54,7 @@
 	<div class="row crystals">
 		
 		<div class="col-lg-12">
-			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/pinkcrystal.jpg?raw=true" id="pink-crystal" height="100px">
+			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/newpink.jpeg?raw=true" id="pink-crystal" height="100px">
 			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/bluecrystal.jpg?raw=true" id="blue-crystal" height="100px">
 			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/purplecrystal.jpg?raw=true" id="purple-crystal" height="100px">
 			<image src="https://github.com/paigepittman/week-4-game/blob/master/assets/images/greencrystal.jpg?raw=true" id="green-crystal" height="100px">
