--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Alice|Philosopher|Poiret+One" rel="stylesheet">
 
 <link rel="stylesheet" href="assets/css/style.css">
 <script src="assets/javascript/game.js"></script>
@@ -26,13 +27,15 @@
 		There are four crystals below. By clicking on a crystal you will add a specific amount of points to your score.<br>
 		You win the game by matching your total score to the random number. You lose the game if your totly score goes over the random number.<br>
 		The value of each crystal is hidden from you until you click on it.<br>
-		Each time the game starts, the game will change the value of each crystal. 
+		Each time the game starts, the game will change the value of each crystal. <br>
+		<button type="button" class="btn btn-default btn-lg">Start</button>
+
 		</div>
 	</div>
 
 	<div class="row score-board">
 		<div class="col-lg-6 random">
-		random number
+		?
 		</div>
 		<div class="col-lg-6 wins-losses">
 		wins:<br>losses:<br>
