--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 		<div class="col-lg-12">
 		You will be given a random number at the start of the game.<br>
 		There are four crystals below. By clicking on a crystal you will add a specific amount of points to your score.<br>
-		You win the game by matching your total score to the random number. You lose the game if your totly score goes over the random number.<br>
+		You win the game by matching your total score to the random number. You lose the game if your total score goes over the random number.<br>
 		The value of each crystal is hidden from you until you click on it.<br>
 		Each time the game starts, the game will change the value of each crystal. <br>
-		<button type="button" class="btn btn-default btn-lg">Start</button>
+		<!-- <button type="button" class="btn btn-default btn-lg">Start</button> -->
 
 		</div>
 	</div>
@@ -38,7 +38,7 @@
 		?
 		</div>
 		<div class="col-lg-6 wins-losses">
-		wins:<br>losses:<br>
+		wins:<section id ="wins"></section><br>losses:<section id ="losses"></section><br>
 		</div>
 	</div>
 
