--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		You win the game by matching your total score to the random number. You lose the game if your total score goes over the random number.<br>
 		The value of each crystal is hidden from you until you click on it.<br>
 		Each time the game starts, the game will change the value of each crystal. <br>
-		<button type="button" class="btn btn-default btn-lg">Start</button>
+		<button type="button" class="btn btn-default btn-lg">Play</button>
 
 		</div>
 	</div>
